update wizard model

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #57a5d2; }
+  background: #181e67; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6878f7; }
+  background: #6beda8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b01f48; }
+  background: #2931cc; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #e776a1; }
+  background: #0f0aa7; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #756247; }
+  background: #23096d; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cfd5b2; }
+  background: #6d67d2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7cf8a6; }
+  background: #e78416; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5a3566; }
+  background: #5ab1fa; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a07ce0; }
+  background: #8bb05d; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7d8233; }
+  background: #07c3f8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6f0e30; }
+  background: #0e0322; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0a2368; }
+  background: #bd3fa2; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0290d4; }
+  background: #d4d3bf; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #fb37a4; }
+  background: #f0c2bd; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #370919; }
+  background: #e0b2f3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #ccb444; }
+  background: #43816b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b85e3c; }
+  background: #2bbe41; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #100bc3; }
+  background: #35be33; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #4115b1; }
+  background: #c46ea2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #45a106; }
+  background: #ce68f5; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #0da6fb; }
+  background: #848a72; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ecb035; }
+  background: #b74287; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #f487ab; }
+  background: #080274; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0e0fa3; }
+  background: #2c474b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #5eb4c0; }
+  background: #04b392; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4779eb; }
+  background: #e1d8d8; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #38d03d; }
+  background: #48bdf3; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #a7138a; }
+  background: #f6adf0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #40a19f; }
+  background: #b775b0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #94cb83; }
+  background: #af3374; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #16f3c0; }
+  background: #32b72d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #eeca51; }
+  background: #e68fc4; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c10a71; }
+  background: #aa62d1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #335257; }
+  background: #7ae75a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6abbba; }
+  background: #78b0e0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #090a56; }
+  background: #09c11c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #627a7f; }
+  background: #8eb011; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #66e68f; }
+  background: #3b1a61; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3ed2b8; }
+  background: #fa0326; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a3272b; }
+  background: #e4362a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #a1e7c5; }
+  background: #26a8a5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #63f01e; }
+  background: #781913; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a309d7; }
+  background: #f03963; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #13ed40; }
+  background: #184a73; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #6ab426; }
+  background: #058edf; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3b18b7; }
+  background: #972c16; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #5e16c2; }
+  background: #25cc95; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4cf67e; }
+  background: #5603b3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #d589b4; }
+  background: #bb92be; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #e0c025; }
+  background: #6d2772; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #bda3ee; }
+  background: #a40439; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #c64b73; }
+  background: #4336aa; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f5e6c6; }
+  background: #1aa2cf; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6167d2; }
+  background: #a33bc6; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #512f52; }
+  background: #3b3688; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #a6014f; }
+  background: #eb9e9d; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #d9515f; }
+  background: #26d6e8; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e30d7d; }
+  background: #ee7ace; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #cab223; }
+  background: #fa4857; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #1d91f5; }
+  background: #253b18; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #fba118; }
+  background: #d682e8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d506c8; }
+  background: #227a29; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #bc7c34; }
+  background: #947c08; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b70249; }
+  background: #a5ec04; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #aab6ae; }
+  background: #f3d006; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #22f530; }
+  background: #8593d5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #83b699; }
+  background: #69e1e1; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ad9120; }
+  background: #ea9407; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #18e6ae; }
+  background: #22db4f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #72ccdf; }
+  background: #e8cfef; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #b829c5; }
+  background: #c6bfcf; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6bc2e7; }
+  background: #b887b6; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #895a69; }
+  background: #0c50cc; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #fa2f40; }
+  background: #17f81f; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #95579b; }
+  background: #a145f1; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #9ee77c; }
+  background: #548c29; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6aac4d; }
+  background: #0fef3e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6c3822; }
+  background: #d9c5d5; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #6f6879; }
+  background: #5e1db7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #e0283c; }
+  background: #f159f1; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b7f890; }
+  background: #1c35f5; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b26a1b; }
+  background: #6aa1c3; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5a569e; }
+  background: #0fc79d; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c097d7; }
+  background: #9fefcc; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #46a2fb; }
+  background: #097d68; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #78f478; }
+  background: #836be4; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #32a666; }
+  background: #a5c779; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #987789; }
+  background: #a0d34f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #13ece7; }
+  background: #614d1d; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6735cd; }
+  background: #80f906; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d16cf4; }
+  background: #d74edc; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2d9f81; }
+  background: #31e776; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #bf5b64; }
+  background: #3142c3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #ef0cfc; }
+  background: #084d53; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #d6225f; }
+  background: #e4fd71; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #976bec; }
+  background: #35515d; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #46c8da; }
+  background: #dfefca; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9ff1e7; }
+  background: #b09d79; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e0839e; }
+  background: #371ef4; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d816d4; }
+  background: #520147; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11443,6 +11443,9 @@ input:checked + .sliders:before {
     padding: 8px 10px !important; }
   .query-wizard-exp-contents .query-wizard-expension .all-select {
     padding: 8px 10px !important; }
+  .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select div + div,
+  .query-wizard-exp-contents .query-wizard-expension .dropdown-with-logos div + div {
+    font-size: 12px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
     width: 34px !important; }
 
@@ -11463,7 +11466,7 @@ input:checked + .sliders:before {
       height: 55px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -53px;
+      top: -54px;
       left: 49px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
@@ -11473,7 +11476,7 @@ input:checked + .sliders:before {
         background: #776fff;
         border-radius: 50%;
         color: #fff;
-        padding: 2px 8px;
+        padding: 4px 9px 2px;
         margin-left: 3px;
         font-size: 23px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
@@ -11490,7 +11493,7 @@ input:checked + .sliders:before {
       margin-left: -3px;
       top: 22px;
       left: 55px;
-      width: 74%; }
+      width: 72%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
       z-index: 2; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
@@ -11540,7 +11543,7 @@ input:checked + .sliders:before {
   border-radius: 50px; }
 
 .rule-btn {
-  margin-right: 40px; }
+  margin-right: 28px; }
 
 .togleBtn {
   background: #776fff;
@@ -11554,6 +11557,23 @@ input:checked + .sliders:before {
     padding: 6px;
     color: #776fff;
     border-radius: 30px; }
+
+.and-or-div {
+  display: flex;
+  justify-content: center;
+  position: relative; }
+  .and-or-div::after {
+    content: "";
+    width: 0;
+    height: 100px;
+    position: absolute;
+    border: 1px solid #776fff;
+    top: 0px;
+    left: 50%; }
+  .and-or-div .query-toggle-btn-div {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    z-index: 2; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
