model css changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #181e67; }
+  background: #37af27; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6beda8; }
+  background: #22dcae; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2931cc; }
+  background: #9e8ae8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #0f0aa7; }
+  background: #da2b2b; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #23096d; }
+  background: #723b15; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6d67d2; }
+  background: #891fb8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e78416; }
+  background: #1781ac; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5ab1fa; }
+  background: #e7c95f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8bb05d; }
+  background: #f8dc82; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #07c3f8; }
+  background: #b0a8e5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0e0322; }
+  background: #988a9d; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #bd3fa2; }
+  background: #4e3620; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #d4d3bf; }
+  background: #987680; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f0c2bd; }
+  background: #27c01d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e0b2f3; }
+  background: #721fc1; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #43816b; }
+  background: #0d1752; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #2bbe41; }
+  background: #f89fe0; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #35be33; }
+  background: #a923a1; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #c46ea2; }
+  background: #ed9646; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #ce68f5; }
+  background: #fbc165; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #848a72; }
+  background: #4f42f2; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b74287; }
+  background: #3ccbd1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #080274; }
+  background: #e160d0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #2c474b; }
+  background: #a996e7; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #04b392; }
+  background: #630532; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e1d8d8; }
+  background: #6dcb7c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #48bdf3; }
+  background: #81afbd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f6adf0; }
+  background: #35d56e; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b775b0; }
+  background: #14c9b6; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #af3374; }
+  background: #dba683; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #32b72d; }
+  background: #86ca4b; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e68fc4; }
+  background: #5806ab; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #aa62d1; }
+  background: #f73ac2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #7ae75a; }
+  background: #7efd10; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #78b0e0; }
+  background: #ea3a31; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #09c11c; }
+  background: #65ec25; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #8eb011; }
+  background: #aa9f83; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #3b1a61; }
+  background: #113049; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fa0326; }
+  background: #4d35e2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e4362a; }
+  background: #387f2f; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #26a8a5; }
+  background: #d9888d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #781913; }
+  background: #fd517e; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #f03963; }
+  background: #503716; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #184a73; }
+  background: #4c6ef8; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #058edf; }
+  background: #78ceb8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #972c16; }
+  background: #3bced0; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #25cc95; }
+  background: #51c7fb; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5603b3; }
+  background: #356717; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bb92be; }
+  background: #454929; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #6d2772; }
+  background: #dc210b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #a40439; }
+  background: #805176; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #4336aa; }
+  background: #4e39c9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #1aa2cf; }
+  background: #7c4a6d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #a33bc6; }
+  background: #a748b9; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3b3688; }
+  background: #7ea0f8; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #eb9e9d; }
+  background: #2e0aef; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #26d6e8; }
+  background: #b34d84; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #ee7ace; }
+  background: #baff39; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #fa4857; }
+  background: #c25154; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #253b18; }
+  background: #ff3c4e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #d682e8; }
+  background: #a064be; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #227a29; }
+  background: #8b706e; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #947c08; }
+  background: #368ed0; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a5ec04; }
+  background: #f2e18b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f3d006; }
+  background: #09797d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #8593d5; }
+  background: #6099b5; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #69e1e1; }
+  background: #0f5831; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #ea9407; }
+  background: #d7edfc; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #22db4f; }
+  background: #9d6ce3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #e8cfef; }
+  background: #d761c6; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #c6bfcf; }
+  background: #aa2717; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #b887b6; }
+  background: #ea1638; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #0c50cc; }
+  background: #dadc28; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #17f81f; }
+  background: #2eaa20; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #a145f1; }
+  background: #0d2478; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #548c29; }
+  background: #43ebd4; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #0fef3e; }
+  background: #f108d1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #d9c5d5; }
+  background: #4362d5; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #5e1db7; }
+  background: #98c9d0; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #f159f1; }
+  background: #f1ba93; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #1c35f5; }
+  background: #3e178f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #6aa1c3; }
+  background: #aef659; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #0fc79d; }
+  background: #b61029; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9fefcc; }
+  background: #3ceda1; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #097d68; }
+  background: #b3c22b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #836be4; }
+  background: #17dc97; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a5c779; }
+  background: #d7e960; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #a0d34f; }
+  background: #20daa5; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #614d1d; }
+  background: #cff7f9; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #80f906; }
+  background: #0a2ef4; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d74edc; }
+  background: #6ca2d5; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #31e776; }
+  background: #321447; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #3142c3; }
+  background: #6ab03c; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #084d53; }
+  background: #5881b5; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e4fd71; }
+  background: #38c949; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #35515d; }
+  background: #6cc467; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #dfefca; }
+  background: #7605de; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b09d79; }
+  background: #7d4d55; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #371ef4; }
+  background: #7d18b5; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #520147; }
+  background: #1e4869; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11428,7 +11428,7 @@ input:checked + .sliders:before {
   padding: 25px; }
 
 .query-wizard-exp-wrapper {
-  padding: 15px; }
+  padding: 40px 25px; }
 
 .query-wizard-exp-contents {
   background: #f3f3f3;
@@ -11438,16 +11438,18 @@ input:checked + .sliders:before {
 .query-wizard-exp-contents .query-wizard-expension {
   position: relative; }
   .query-wizard-exp-contents .query-wizard-expension .exists-dropdown {
-    padding: 8px 10px !important; }
+    padding: 6px 10px !important; }
+  .query-wizard-exp-contents .query-wizard-expension .medium-dropdown {
+    padding: 6px 10px; }
   .query-wizard-exp-contents .query-wizard-expension .query-wizard-dropdown-large {
-    padding: 8px 10px !important; }
+    padding: 6px 10px !important; }
   .query-wizard-exp-contents .query-wizard-expension .all-select {
-    padding: 8px 10px !important; }
+    padding: 6px 10px !important; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select div + div,
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-logos div + div {
     font-size: 12px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img-select img {
-    width: 34px !important; }
+    width: 30px !important; }
 
 .query-wizard-exp-contents .query-wizard-expension {
   display: flex !important;
@@ -11459,7 +11461,7 @@ input:checked + .sliders:before {
     margin-right: 10px !important; }
   .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn {
     position: relative;
-    padding-left: 33px; }
+    padding-left: 30px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn::after {
       content: "";
       width: 0;
@@ -11476,7 +11478,7 @@ input:checked + .sliders:before {
         background: #776fff;
         border-radius: 50%;
         color: #fff;
-        padding: 4px 9px 2px;
+        padding: 7px 12px 4px;
         margin-left: 3px;
         font-size: 23px; }
   .query-wizard-exp-contents .query-wizard-expension .dropdown-with-img {
@@ -11493,15 +11495,15 @@ input:checked + .sliders:before {
       margin-left: -3px;
       top: 22px;
       left: 55px;
-      width: 72%; }
+      width: 70%; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter div {
-      z-index: 2; }
+      z-index: 4; }
     .query-wizard-exp-contents .query-wizard-expension .fields-wrappter .disabled-input {
       background: #776fff;
       border: 1px solid #776fff;
-      padding: 10px 20px;
+      padding: 8px;
       color: #fff;
-      border-radius: 35px; }
+      border-radius: 25px; }
   .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter {
     display: flex !important;
     justify-content: space-between !important;
@@ -11512,7 +11514,7 @@ input:checked + .sliders:before {
       position: absolute;
       top: 50%;
       margin-left: -3px;
-      top: 24px;
+      top: 18px;
       left: 23px;
       width: 80%; }
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter::after {
@@ -11528,9 +11530,9 @@ input:checked + .sliders:before {
     .query-wizard-exp-contents .query-wizard-expension .add-fields-wrappter .disabled-input {
       background: #fff;
       border: 2px solid #776fff;
-      padding: 10px 20px;
+      padding: 8px;
       color: #776fff;
-      border-radius: 35px; }
+      border-radius: 25px; }
 
 .query-wizard-div-box {
   margin-left: 10px !important;
@@ -11538,25 +11540,39 @@ input:checked + .sliders:before {
 
 .close-action a {
   background: #fff;
-  padding: 12px 12px 8px;
+  padding: 6px 6px 3px;
   border: 2px solid #776fff;
-  border-radius: 50px; }
+  border-radius: 50px;
+  color: #776fff; }
 
 .rule-btn {
-  margin-right: 28px; }
+  margin-right: 8px; }
 
 .togleBtn {
   background: #776fff;
   border: 2px solid #776fff;
-  padding: 10px;
+  padding: 8px 2px 8px 8px;
   color: #fff;
-  border-radius: 35px; }
+  border-radius: 25px; }
   .togleBtn span {
     background: #fff;
     border: 2px solid #fff;
     padding: 6px;
     color: #776fff;
-    border-radius: 30px; }
+    border-radius: 15px; }
+
+.togleBtnDisable {
+  background: #cfcfcf;
+  border: 2px solid #cfcfcf;
+  padding: 8px 2px 8px 8px;
+  color: #fff;
+  border-radius: 25px; }
+  .togleBtnDisable span {
+    background: #fff;
+    border: 2px solid #fff;
+    padding: 6px;
+    color: #484848;
+    border-radius: 15px; }
 
 .and-or-div {
   display: flex;
